LatexCompiler/obj/Debug/GrammarParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.6.6
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Users\Manos\Desktop\LatexCompiler\LatexCompiler\Grammar.g4 by ANTLR 4.6.6

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace LatexCompiler {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.6.6")]
[System.CLSCompliant(false)]
public partial class GrammarParser : Parser {
	public const int
		T__0=1, T__1=2, EXP=3, FRAC=4, Alpha=5, Beta=6, Chi=7, Delta=8, Kappa=9, 
		Lambda=10, Omega=11, Phi=12, Pi=13, Sigma=14, SQUARE=15, LFLOOR=16, RFLOOR=17, 
		LCEIL=18, RCEIL=19, COS=20, SIN=21, ARCCOS=22, ARCSIN=23, ARCTAN=24, LOG=25, 
		LIM=26, LB=27, RB=28, LBrackets=29, RBrackets=30, PLUS=31, MINUS=32, MULTI=33, 
		DIV=34, LP=35, RP=36, GT=37, GTE=38, LT=39, LTE=40, ASSIGN=41, TO=42, 
		SUM=43, PROD=44, INT=45, NUMBER=46, VARIABLE=47, INF=48, WS=49;
	public const int
		RULE_compileUnit = 0, RULE_expr = 1, RULE_expression = 2, RULE_paren = 3, 
		RULE_squareRoot = 4, RULE_fraction = 5, RULE_floor = 6, RULE_ceil = 7, 
		RULE_functions = 8, RULE_sum = 9, RULE_lim = 10, RULE_product = 11, RULE_integrals = 12, 
		RULE_greekLetters = 13;
	public static readonly string[] ruleNames = {
		"compileUnit", "expr", "expression", "paren", "squareRoot", "fraction", 
		"floor", "ceil", "functions", "sum", "lim", "product", "integrals", "greekLetters"
	};

	private static readonly string[] _LiteralNames = {
		null, "','", "'_'", "'^'", "'\\frac'", "'\\alpha'", "'\\beta'", "'\\chi'", 
		"'\\delta'", "'\\kappa'", "'\\lambda'", "'\\omega'", "'\\phi'", "'\\pi'", 
		"'\\sigma'", "'\\sqrt'", "'\\lfloor'", "'\\rfloor'", "'\\lceil'", "'\\rceil'", 
		"'\\cos'", "'\\sin'", "'\\arccos'", "'\\arcsin'", "'\\arctan'", "'\\log'", 
		"'\\lim'", "'{'", "'}'", "'['", "']'", "'+'", "'-'", "'*'", "'/'", "'('", 
		"')'", "'>'", "'>='", "'<'", "'<='", "'='", "'\\to'", "'\\sum'", "'\\prod'", 
		"'\\int'", null, null, "'\\infty'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, "EXP", "FRAC", "Alpha", "Beta", "Chi", "Delta", "Kappa", 
		"Lambda", "Omega", "Phi", "Pi", "Sigma", "SQUARE", "LFLOOR", "RFLOOR", 
		"LCEIL", "RCEIL", "COS", "SIN", "ARCCOS", "ARCSIN", "ARCTAN", "LOG", "LIM", 
		"LB", "RB", "LBrackets", "RBrackets", "PLUS", "MINUS", "MULTI", "DIV", 
		"LP", "RP", "GT", "GTE", "LT", "LTE", "ASSIGN", "TO", "SUM", "PROD", "INT", 
		"NUMBER", "VARIABLE", "INF", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete("Use IRecognizer.Vocabulary instead.")]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Grammar.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public GrammarParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class CompileUnitContext : ParserRuleContext {
		public ITerminalNode Eof() { return GetToken(GrammarParser.Eof, 0); }
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public CompileUnitContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_compileUnit; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.EnterCompileUnit(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.ExitCompileUnit(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammarVisitor<TResult> typedVisitor = visitor as IGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCompileUnit(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CompileUnitContext compileUnit() {
		CompileUnitContext _localctx = new CompileUnitContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_compileUnit);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 29;
			_errHandler.Sync(this);
			_la = _input.La(1);
			do {
				{
				{
				State = 28; expr();
				}
				}
				State = 31;
				_errHandler.Sync(this);
				_la = _input.La(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << FRAC) | (1L << Alpha) | (1L << Beta) | (1L << Chi) | (1L << Delta) | (1L << Kappa) | (1L << Lambda) | (1L << Omega) | (1L << Phi) | (1L << Pi) | (1L << Sigma) | (1L << SQUARE) | (1L << LFLOOR) | (1L << LCEIL) | (1L << COS) | (1L << SIN) | (1L << ARCCOS) | (1L << ARCSIN) | (1L << ARCTAN) | (1L << LOG) | (1L << LIM) | (1L << LP) | (1L << SUM) | (1L << PROD) | (1L << INT) | (1L << NUMBER) | (1L << VARIABLE) | (1L << INF))) != 0) );
			State = 33; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExprContext : ParserRuleContext {
		public ExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expr; } }
	 
		public ExprContext() { }
		public virtual void CopyFrom(ExprContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class Expression_exprContext : ExprContext {
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public Expression_exprContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.EnterExpression_expr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.ExitExpression_expr(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammarVisitor<TResult> typedVisitor = visitor as IGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpression_expr(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class PlusMinus_exprContext : ExprContext {
		public IToken op;
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ITerminalNode PLUS() { return GetToken(GrammarParser.PLUS, 0); }
		public ITerminalNode MINUS() { return GetToken(GrammarParser.MINUS, 0); }
		public PlusMinus_exprContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.EnterPlusMinus_expr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.ExitPlusMinus_expr(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammarVisitor<TResult> typedVisitor = visitor as IGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPlusMinus_expr(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ExpExpressionMinus_exprContext : ExprContext {
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public ITerminalNode EXP() { return GetToken(GrammarParser.EXP, 0); }
		public ITerminalNode LB() { return GetToken(GrammarParser.LB, 0); }
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public ITerminalNode RB() { return GetToken(GrammarParser.RB, 0); }
		public ITerminalNode MINUS() { return GetToken(GrammarParser.MINUS, 0); }
		public ExpExpressionMinus_exprContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.EnterExpExpressionMinus_expr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.ExitExpExpressionMinus_expr(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammarVisitor<TResult> typedVisitor = visitor as IGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpExpressionMinus_expr(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Assign_exprContext : ExprContext {
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public ITerminalNode ASSIGN() { return GetToken(GrammarParser.ASSIGN, 0); }
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public Assign_exprContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.EnterAssign_expr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.ExitAssign_expr(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammarVisitor<TResult> typedVisitor = visitor as IGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAssign_expr(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class GTLTGTELTE_exprContext : ExprContext {
		public IToken op;
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ITerminalNode GT() { return GetToken(GrammarParser.GT, 0); }
		public ITerminalNode LT() { return GetToken(GrammarParser.LT, 0); }
		public ITerminalNode GTE() { return GetToken(GrammarParser.GTE, 0); }
		public ITerminalNode LTE() { return GetToken(GrammarParser.LTE, 0); }
		public GTLTGTELTE_exprContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.EnterGTLTGTELTE_expr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.ExitGTLTGTELTE_expr(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammarVisitor<TResult> typedVisitor = visitor as IGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitGTLTGTELTE_expr(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class MultiDiv_exprContext : ExprContext {
		public IToken op;
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ITerminalNode MULTI() { return GetToken(GrammarParser.MULTI, 0); }
		public ITerminalNode DIV() { return GetToken(GrammarParser.DIV, 0); }
		public MultiDiv_exprContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.EnterMultiDiv_expr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.ExitMultiDiv_expr(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammarVisitor<TResult> typedVisitor = visitor as IGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMultiDiv_expr(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ExpExpression_exprContext : ExprContext {
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public ITerminalNode EXP() { return GetToken(GrammarParser.EXP, 0); }
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ExpExpression_exprContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.EnterExpExpression_expr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.ExitExpExpression_expr(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammarVisitor<TResult> typedVisitor = visitor as IGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpExpression_expr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExprContext expr() {
		ExprContext _localctx = new ExprContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_expr);
		int _la;
		try {
			State = 67;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,3,_ctx) ) {
			case 1:
				_localctx = new Expression_exprContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 35; expression();
				}
				break;

			case 2:
				_localctx = new MultiDiv_exprContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 36; expression();
				State = 37;
				((MultiDiv_exprContext)_localctx).op = _input.Lt(1);
				_la = _input.La(1);
				if ( !(_la==MULTI || _la==DIV) ) {
					((MultiDiv_exprContext)_localctx).op = _errHandler.RecoverInline(this);
				} else {
					if (_input.La(1) == TokenConstants.Eof) {
						matchedEOF = true;
					}

					_errHandler.ReportMatch(this);
					Consume();
				}
				State = 38; expr();
				}
				break;

			case 3:
				_localctx = new PlusMinus_exprContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 40; expression();
				State = 41;
				((PlusMinus_exprContext)_localctx).op = _input.Lt(1);
				_la = _input.La(1);
				if ( !(_la==PLUS || _la==MINUS) ) {
					((PlusMinus_exprContext)_localctx).op = _errHandler.RecoverInline(this);
				} else {
					if (_input.La(1) == TokenConstants.Eof) {
						matchedEOF = true;
					}

					_errHandler.ReportMatch(this);
					Consume();
				}
				State = 42; expr();
				}
				break;

			case 4:
				_localctx = new GTLTGTELTE_exprContext(_localctx);
				EnterOuterAlt(_localctx, 4);
				{
				State = 44; expression();
				State = 45;
				((GTLTGTELTE_exprContext)_localctx).op = _input.Lt(1);
				_la = _input.La(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << GT) | (1L << GTE) | (1L << LT) | (1L << LTE))) != 0)) ) {
					((GTLTGTELTE_exprContext)_localctx).op = _errHandler.RecoverInline(this);
				} else {
					if (_input.La(1) == TokenConstants.Eof) {
						matchedEOF = true;
					}

					_errHandler.ReportMatch(this);
					Consume();
				}
				State = 46; expr();
				}
				break;

			case 5:
				_localctx = new ExpExpression_exprContext(_localctx);
				EnterOuterAlt(_localctx, 5);
				{
				State = 48; expression();
				State = 49; Match(EXP);
				State = 50; expr();
				}
				break;

			case 6:
				_localctx = new ExpExpressionMinus_exprContext(_localctx);
				EnterOuterAlt(_localctx, 6);
				{
				State = 52; expression();
				State = 53; Match(EXP);
				State = 54; Match(LB);
				State = 56;
				_errHandler.Sync(this);
				_la = _input.La(1);
				if (_la==MINUS) {
					{
					State = 55; Match(MINUS);
					}
				}

				State = 58; expr();
				State = 59; Match(RB);
				State = 61;
				_errHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(_input,2,_ctx) ) {
				case 1:
					{
					State = 60; expr();
					}
					break;
				}
				}
				break;

			case 7:
				_localctx = new Assign_exprContext(_localctx);
				EnterOuterAlt(_localctx, 7);
				{
				State = 63; expression();
				State = 64; Match(ASSIGN);
				State = 65; expr();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExpressionContext : ParserRuleContext {
		public SquareRootContext squareRoot() {
			return GetRuleContext<SquareRootContext>(0);
		}
		public FractionContext fraction() {
			return GetRuleContext<FractionContext>(0);
		}
		public GreekLettersContext greekLetters() {
			return GetRuleContext<GreekLettersContext>(0);
		}
		public FloorContext floor() {
			return GetRuleContext<FloorContext>(0);
		}
		public CeilContext ceil() {
			return GetRuleContext<CeilContext>(0);
		}
		public FunctionsContext functions() {
			return GetRuleContext<FunctionsContext>(0);
		}
		public SumContext sum() {
			return GetRuleContext<SumContext>(0);
		}
		public LimContext lim() {
			return GetRuleContext<LimContext>(0);
		}
		public ProductContext product() {
			return GetRuleContext<ProductContext>(0);
		}
		public IntegralsContext integrals() {
			return GetRuleContext<IntegralsContext>(0);
		}
		public ParenContext paren() {
			return GetRuleContext<ParenContext>(0);
		}
		public ITerminalNode NUMBER() { return GetToken(GrammarParser.NUMBER, 0); }
		public ITerminalNode VARIABLE() { return GetToken(GrammarParser.VARIABLE, 0); }
		public ITerminalNode INF() { return GetToken(GrammarParser.INF, 0); }
		public ExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expression; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.EnterExpression(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.ExitExpression(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammarVisitor<TResult> typedVisitor = visitor as IGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExpressionContext expression() {
		ExpressionContext _localctx = new ExpressionContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_expression);
		try {
			State = 83;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,4,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 69; squareRoot();
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 70; fraction();
				}
				break;

			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 71; greekLetters();
				}
				break;

			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 72; floor();
				}
				break;

			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 73; ceil();
				}
				break;

			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 74; functions();
				}
				break;

			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 75; sum();
				}
				break;

			case 8:
				EnterOuterAlt(_localctx, 8);
				{
				State = 76; lim();
				}
				break;

			case 9:
				EnterOuterAlt(_localctx, 9);
				{
				State = 77; product();
				}
				break;

			case 10:
				EnterOuterAlt(_localctx, 10);
				{
				State = 78; integrals();
				}
				break;

			case 11:
				EnterOuterAlt(_localctx, 11);
				{
				State = 79; paren();
				}
				break;

			case 12:
				EnterOuterAlt(_localctx, 12);
				{
				State = 80; Match(NUMBER);
				}
				break;

			case 13:
				EnterOuterAlt(_localctx, 13);
				{
				State = 81; Match(VARIABLE);
				}
				break;

			case 14:
				EnterOuterAlt(_localctx, 14);
				{
				State = 82; Match(INF);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ParenContext : ParserRuleContext {
		public ITerminalNode LP() { return GetToken(GrammarParser.LP, 0); }
		public ITerminalNode RP() { return GetToken(GrammarParser.RP, 0); }
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public ParenContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_paren; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.EnterParen(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.ExitParen(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammarVisitor<TResult> typedVisitor = visitor as IGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParen(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ParenContext paren() {
		ParenContext _localctx = new ParenContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_paren);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 85; Match(LP);
			State = 87;
			_errHandler.Sync(this);
			_la = _input.La(1);
			do {
				{
				{
				State = 86; expr();
				}
				}
				State = 89;
				_errHandler.Sync(this);
				_la = _input.La(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << FRAC) | (1L << Alpha) | (1L << Beta) | (1L << Chi) | (1L << Delta) | (1L << Kappa) | (1L << Lambda) | (1L << Omega) | (1L << Phi) | (1L << Pi) | (1L << Sigma) | (1L << SQUARE) | (1L << LFLOOR) | (1L << LCEIL) | (1L << COS) | (1L << SIN) | (1L << ARCCOS) | (1L << ARCSIN) | (1L << ARCTAN) | (1L << LOG) | (1L << LIM) | (1L << LP) | (1L << SUM) | (1L << PROD) | (1L << INT) | (1L << NUMBER) | (1L << VARIABLE) | (1L << INF))) != 0) );
			State = 91; Match(RP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SquareRootContext : ParserRuleContext {
		public SquareRootContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_squareRoot; } }
	 
		public SquareRootContext() { }
		public virtual void CopyFrom(SquareRootContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class Square_expressionContext : SquareRootContext {
		public ITerminalNode SQUARE() { return GetToken(GrammarParser.SQUARE, 0); }
		public ITerminalNode LB() { return GetToken(GrammarParser.LB, 0); }
		public ITerminalNode RB() { return GetToken(GrammarParser.RB, 0); }
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public Square_expressionContext(SquareRootContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.EnterSquare_expression(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.ExitSquare_expression(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammarVisitor<TResult> typedVisitor = visitor as IGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSquare_expression(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class NSquare_expressionContext : SquareRootContext {
		public ITerminalNode SQUARE() { return GetToken(GrammarParser.SQUARE, 0); }
		public ITerminalNode LBrackets() { return GetToken(GrammarParser.LBrackets, 0); }
		public ITerminalNode NUMBER() { return GetToken(GrammarParser.NUMBER, 0); }
		public ITerminalNode RBrackets() { return GetToken(GrammarParser.RBrackets, 0); }
		public ITerminalNode LB() { return GetToken(GrammarParser.LB, 0); }
		public ITerminalNode RB() { return GetToken(GrammarParser.RB, 0); }
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public NSquare_expressionContext(SquareRootContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.EnterNSquare_expression(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.ExitNSquare_expression(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGrammarVisitor<TResult> typedVisitor = visitor as IGrammarVisitor<TResult>;
